<resources>
    <string name="app_name">SmartID</string>
    <string name="title_toolbar">SmartID</string>
    <string name="title_bluetooth_RFID">Chọn Thiết Bị RFID</string>
    <string name="title_bluetooth_Scale">Chọn Cân</string>
    <string name="uit">University of Information Technology</string>
    <string name="selectFunction">Chọn Chức Năng</string>
    <string name="pay">Thanh Toán</string>
    <string name="Import">Nhập Kho</string>
    <string name="check">Kiểm Kho</string>
    <string name="Pay">Thành Tiền: </string>
    <string name="Scale">Cân Nặng: </string>
    <string name="confirm">Xác Nhận Mua</string>
    <string name="ScanRIFD">Quét</string>
    <string name="StopScanRIFD">Ngừng quét</string>
    <string name="ScanCan">Cân</string>
    <string name="Product">Sản Phẩm</string>
    <string name="CheckProduct">Kiểm Tra</string>
    <string name="Read">Đọc Mã</string>
    <string name="SaveDatabase">Lưu</string>
    <string name="ID">Mã Thẻ</string>
    <string name="NameProduct">Tên Sản Phẩm: </string>
    <string name="InputName">Nhập Tên Sản Phẩm: </string>
    <string name="price">Giá: </string>
    <string name="weight">Trọng Lượng: </string>
    <string name="Enter">Nhập Kho</string>
    <string name="setting">Cài Đặt</string>
    <string name="bill">Hóa Đơn</string>
    <string name="clear">Xóa Danh Sách</string>
    <string name="detailbill">Chi Tiết Hóa Đơn</string>
</resources>
