<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_toolbar"
        android:background="@drawable/background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_toolbar"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"
            android:textColor="@color/colorTextToolBar"
            android:textSize="30sp"
            android:textStyle="bold"
            android:drawableStart = "@drawable/ic_ce"/>
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#55000000"
        android:textColor="@color/colorIconWhilte"
        android:text="@string/selectFunction"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">
        </LinearLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/pay_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pay"
                android:background="@drawable/button"
                android:textColor="@color/colorTextWhite"/>
            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/import_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Import"
                android:background="@drawable/button"
                android:textColor="@color/colorTextWhite" />
            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/check_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check"
                android:background="@drawable/button"
                android:textColor="@color/colorTextWhite"/>
            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/setting_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:background="@drawable/button_sp"
                android:textColor="@color/colorTextWhite"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">
        </LinearLayout>
    </LinearLayout>

</LinearLayout>