<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/layout_cover_pay"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_toolbar"
            android:background="@drawable/background">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_toolbar"
                android:layout_gravity="center"
                android:textColor="@color/colorTextToolBar"
                android:textSize="30sp"
                android:textStyle="bold"
                android:drawableStart = "@drawable/ic_ce"/>
        </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="#55000000"
                android:textColor="@color/colorIconWhilte"
                android:text="@string/pay"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <TextView
            android:id="@+id/cooldown"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textStyle="italic"
            android:textColor="@color/colorTextWhite"
            android:textSize="15dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_toolbar"
        android:background="@drawable/background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_toolbar"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"
            android:textColor="@color/colorTextToolBar"
            android:textSize="30sp"
            android:textStyle="bold"
            android:drawableStart = "@drawable/ic_ce"/>
    </android.support.v7.widget.Toolbar>



    <LinearLayout
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#55000000"
            android:textColor="@color/colorIconWhilte"
            android:text="@string/pay"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Reset Cân Trước Khi Thực Hiện Thanh Toán"
            android:textStyle="italic"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorIconWhilte"
            android:gravity="center_horizontal"
            android:textSize="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Scan"
                android:textStyle="bold"
                android:text="@string/ScanRIFD"
                android:background="@drawable/button"
                android:textColor="@color/colorTextWhite"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorTextWhite"
                android:text="Tổng Tiền: "
                android:gravity="center|left"
                android:textStyle="bold"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/numberPay"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="match_parent"
                android:textColor="@color/colorTextWhite"
                android:text="0 VND"
                android:gravity="center|right"
                android:layout_weight="3"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorTextWhite"
                android:text="@string/Scale"
                android:textStyle="bold"
                android:gravity="center|left"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/numberScale"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:textStyle="bold"
                android:textColor="@color/colorTextWhite"
                android:text="0 Kg"
                android:gravity="center|right"
                android:layout_weight="3"
                android:textSize="15sp"/>
            <Button
                android:id="@+id/scale_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:textColor="@color/colorTextWhite"
                android:text="Cân Kiểm Tra"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:enabled="false"
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textColor="@color/colorTextWhite"
                android:background="@color/colorButtonConfirm_sss" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:gravity="center"
                android:text="@string/detailbill"
                android:textColor="@color/colorTextWhite"
                android:textSize="20sp"
                android:textStyle="bold" />
            <ImageButton
                android:src="@drawable/ic_clear_24dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:id="@+id/clear"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/clear"
                android:textColor="@color/colorTextWhite" />


        </LinearLayout>

        <ListView
            android:id="@+id/listProduct"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#00000000"
            android:layout_marginBottom="30dp">
        </ListView>

    </LinearLayout>

</LinearLayout>