<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_toolbar"
        android:background="@drawable/background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_toolbar"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"
            android:textColor="@color/colorTextToolBar"
            android:textSize="30sp"
            android:textStyle="bold"
            android:drawableStart = "@drawable/ic_ce"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#55000000"
            android:textColor="@color/colorIconWhilte"
            android:text="@string/check"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:textStyle="bold"/>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="8"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorTextWhite"
                        android:text="@string/Product"
                        android:gravity="center|left"
                        android:layout_marginRight="10dp"
                        android:textSize="15sp"/>
                    <Spinner
                        android:background="@drawable/background_connent"
                        android:id="@+id/comboBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|right"
                        android:layout_weight="3"
                        android:textSize="15sp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:layout_weight="1"
                android:orientation="vertical">
                <ListView
                    android:id="@+id/product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextWhite"
                    android:layout_weight="1">
                </ListView>
            </LinearLayout>
        </android.support.v7.widget.LinearLayoutCompat>
    </LinearLayout>
</LinearLayout>